ISTO-62 Initial changes for non-destructive incremental classification.